# dloop

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-test.yml  publish.yml
dloop/: __init__.py  events.py  iter_logic.py  loop.py  types.py
tests/: test_events.py  test_import.py  test_iter_logic.py  test_loop.py
tests/examples/: test_simple_mock_examples.py
tests/unit/: test_events.py  test_import.py  test_iter_logic.py  test_loop.py
